@@ -1,3 +1,5 @@
+* Add empty S2.FX.Base#update function to allow for ad-hoc effects using before/afterUpdate
+
 *2.0.0 alpha 5* (November 23, 2009)
 
 * Add UI Themeroller-compatible UI components
